--- a/src/App.css
+++ b/src/App.css
@@ -14,8 +14,15 @@ a {
   text-decoration: none;
 }
 
+/* background: radial-gradient(circle at 3% 25%, rgba(0, 65, 255, 1) 0%, rgba(4, 12, 24, 1) 100%);} */
+/* .gradient__bg {
+background: radial-gradient(circle at 3% 25%, rgba(0, 65, 255, 1) 0%, rgba(207, 13, 228, 1) 100%);
+} */
+
 .gradient__bg {
-background: radial-gradient(circle at 3% 25%, rgba(0, 65, 255, 1) 0%, rgba(4, 12, 24, 1) 100%);}
+  background: linear-gradient(180deg, rgba(4, 12, 24, 1) 0%, rgba(28, 6, 110, 1) 51%, rgba(4, 12, 24, 1) 100%);
+
+}
 
 .gradient__text {
   background: var(--gradient-text);
